Show panel on wayland when focusing different panels

When toggling focus between panels on wayland with Meta+Alt+P, it would break 
if one of the panels was hidden. 

BUG: 453166

BUG: 473000