shell/panelview.cpp
@@ -1464,9 +1464,13 @@ void PanelView::refreshStatus(Plasma::Types::ItemStatus status)
         }
     } else if (status == Plasma::Types::AcceptingInputStatus) {
         setFlags(flags() & ~Qt::WindowDoesNotAcceptFocus);
-#ifdef HAVE_X11
-        KX11Extras::forceActiveWindow(winId());
-#endif
+
+        if (KWindowSystem::isPlatformX11()) {
+            KX11Extras::forceActiveWindow(winId());
+        } else {
+            showTemporarily();
+        }
+
         if (m_layerWindow) {
             m_layerWindow->setKeyboardInteractivity(LayerShellQt::Window::KeyboardInteractivityOnDemand);
             requestUpdate();
